--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
 
     - name: Set up Git
       run: |
-        git config --global user.email "xon3iros@gmail.com"
-        git config --global user.name "xONEIROS"
+        git config --global user.email "sadafgholi02@gmail.com"
+        git config --global user.name "sadafgho"
 
     - name: Select Random Sticker
       id: random_sticker
